fix: Line-through when menu items transition on small screen

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -181,5 +181,6 @@
 		left: 20%;
 		bottom: 40%;
 		border-color: transparent transparent transparent white;
+		transition: none; /* Fix for line-through when transitioning */
 	}
 }
